--- a/frontend/src/sass/base/_padding.scss
+++ b/frontend/src/sass/base/_padding.scss
@@ -20,6 +20,6 @@
   padding: 15px 20px 0 20px;
 }
 
-.LegalTitle {
+.legalTitle {
   padding: 70px 0 70px 0;
 }
