--- a/frontend/src/sass/base/_width.scss
+++ b/frontend/src/sass/base/_width.scss
@@ -8,12 +8,14 @@ footer,
 #leafBottomLeft,
 #leafTopRight,
 .legalContainer,
+.legalTitle,
 .lineBottom,
 .navbar,
 .productCard,
 .productTab,
 .search-bar,
 .search-label:focus,
+.subLegalTitle,
 .textProductCard,
 .youWillLikeIt {
   width: 100%;
